--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 asarPy==1.0.1
 blinker==1.9.0
 click==8.3.0
-Flask==3.1.2
+Flask==3.0.3
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
 networkx==3.5
 numpy==2.3.4
+packaging==25.0
 scikit-fuzzy==0.5.0
 scipy==1.16.3
 Werkzeug==3.1.3
